- Columns: renamed undocumented/internals ImGuiColumnsFlags_* to ImGuiOldColumnFlags_* in prevision of
  incoming Tables API. Keep redirection enums (will obsolete). (#125, #513, #913, #1204, #1444, #2142, #2707)
- Renamed io.ConfigWindowsMemoryCompactTimer to io.ConfigMemoryCompactTimer as the feature will apply
  to other data structures. (#2636)


Other Changes:

- Tables: added new Tables Beta API as a replacement for old Columns. (#2957, #125)
  Check out 'Demo->Tables' for many demos + API comments in imgui.h for details.
  - Added 16 functions: BeginTable(), EndTable(), 
                        TableNextRow(), TableNextColumn(), TableSetColumnIndex(), TableGetColumnIndex(), TableGetRowIndex(), 
                        TableSetupColumn(), TableSetupScrollFreeze(),
                        TableHeadersRow(), TableHeader(), TableSetBgColor(), TableGetSortSpecs(),
                        TableGetColumnCount(), TableGetColumnName(), TableGetColumnFlags().
  - Added 2 structures: ImGuiTableSortSpecs, ImGuiTableColumnSortSpecs.
  - Added 2 enums:      ImGuiSortDirection, ImGuiTableBgTarget.
  - Added 3 flags sets: ImGuiTableFlags (27 flags), ImGuiTableColumnFlags (24 flags), ImGuiTableRowFlags (1 flags).
  - Added 5 colors:     ImGuiCol_TableHeaderBg, ImGuiCol_TableBorderStrong, ImGuiCol_TableBorderLight, ImGuiCol_TableRowBg, ImGuiCol_TableRowBgAlt.
  - Added 1 style var:  ImGuiStyleVar_CellPadding.
- Tab Bar: Made it possible to append to an existing tab bar by calling BeginTabBar()/EndTabBar() again.
- Tab Bar: Fixed using more than 128 tabs in a tab bar (scrolling policy recommended).
- Tab Bar: Do not display a tooltip if the name already fits over a given tab. (#3521)
- Tab Bar: Fixed minor/unlikely bug skipping over a button when scrolling left with arrows.
- Drag and Drop: Fix losing drop source ActiveID (and often source tooltip) when opening a TreeNode()
  or CollapsingHeader() while dragging. (#1738)